<resources>
    <string name="app_name">maymay_test1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maymay">maymay</string>
    <string name="email_address">Email address</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="crreate_new_account">CREATE NEW ACCOUNT</string>
    <string name="signup">SIGNUP</string>
    <string name="have_an_account_sign_in">Have an account? Sign in</string>
    <string name="name">Name</string>
    <string name="version">Version 1.0.34</string>
</resources>
