<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.gagan.maymay_test1.Login"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarlogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/black"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:minHeight="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fontFamily="@font/amita"
        android:gravity="center"
        android:text="@string/maymay"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emaillogin"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/loginprogressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:backgroundTint="#000000"
        android:breakStrategy="high_quality"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:selectAllOnFocus="false"
        android:shadowColor="@android:color/background_light"
        android:singleLine="?android:attr/windowSwipeToDismiss"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_light"
        android:textColorHint="#222222"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/emaillogin"
        android:layout_below="@+id/emaillogin"
        android:backgroundTint="#000000"
        android:ems="10"
        android:freezesText="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textColorHint="#222222"
        android:textColorLink="@android:color/holo_green_dark"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@+id/passwordlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:background="@drawable/btnbg"
        android:shadowColor="@android:color/background_light"
        android:text="@string/login"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <TextView
        android:id="@+id/or"
        android:layout_width="30dp"
        android:layout_height="21dp"
        android:layout_below="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/buttonshape"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/gd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/createnewaccount"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/btnbg"
        android:text="@string/crreate_new_account"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <ProgressBar
        android:id="@+id/loginprogressBar"
        style="@android:style/Widget.DeviceDefault.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarlogin"
        android:visibility="invisible" />

</RelativeLayout>
