<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.gagan.maymay_test1.Register">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarsingup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/black"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:minHeight="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="CREATE A NEW ACCOUNT"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/namesignup"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/alreadyhaveacc"
        android:layout_centerVertical="true"
        android:backgroundTint="#000000"
        android:breakStrategy="high_quality"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:selectAllOnFocus="false"
        android:shadowColor="@android:color/background_light"
        android:singleLine="?android:attr/windowSwipeToDismiss"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_light"
        android:textColorHint="#222222"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <EditText
        android:id="@+id/emailsignup"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/namesignup"
        android:layout_below="@+id/namesignup"
        android:backgroundTint="#000000"
        android:breakStrategy="high_quality"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:selectAllOnFocus="false"
        android:shadowColor="@android:color/background_light"
        android:singleLine="?android:attr/windowSwipeToDismiss"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_light"
        android:textColorHint="#222222"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <EditText
        android:id="@+id/passwordsignup"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:layout_alignStart="@+id/emailsignup"
        android:layout_below="@+id/emailsignup"
        android:backgroundTint="#000000"
        android:ems="10"
        android:freezesText="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textColorHint="#222222"
        android:textColorLink="@android:color/holo_green_dark"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/passwordsignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/btnbg"
        android:shadowColor="@android:color/background_light"
        android:text="@string/signup"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <TextView
        android:id="@+id/textViews"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signup"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/alreadyhaveacc"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textViews"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btnbg"
        android:text="@string/have_an_account_sign_in"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profileimagesignup"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/registerprogressbar"
        android:layout_above="@+id/namesignup"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile"
        app:civ_border_color="#999999"
        app:civ_border_width="2dp" />


    <ProgressBar
        android:id="@+id/registerprogressbar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarsingup"
        android:indeterminate="true"
        android:visibility="invisible" />
</RelativeLayout>
